--- a/requirements.yml
+++ b/requirements.yml
@@ -3,7 +3,7 @@ functional:
   - Пользователь должен иметь возможность зарегистрироваться на сайте
   - Пользователь должен иметь возможность авторизоваться на сайте
   - Пользователь должен иметь возможность создания игровой сессии
-  - Пользователь должен иметь возможность выбора параметров задания (сложности, типа задания, времени на задание) при создании игровой сессии
+  - Пользователь должен иметь возможность выбора параметров задания (сложности, типа задания, времени на задание и т.д) при создании игровой сессии
   - Пользователь должен иметь возможность выбрать с кем он хочет соревноваться в игровой сессии (пользователь или бот)
   - Пользователь должен иметь возможность подключения к созданной игровой сессии
   - Пользователь должен иметь возможность создания, редактирования параметров турнирной игровой сессии
