--- a/requirements.yml
+++ b/requirements.yml
@@ -4,7 +4,7 @@ functional:
   - Пользователь должен иметь возможность авторизоваться на сайте
   - Пользователь должен иметь возможность создания игровой сессии с выбором параметров задания (сложности, типа задания, времени на задание и т.д)
   - Пользователь должен иметь возможность подключения к созданной игровой сессии
-  - Пользователь должен иметь возможность создания, редактирования параметров турнирной игровой сессии
+  - Пользователь должен иметь возможность создания, выбора параметров турнирной игровой сессии
   - Пользователь должен иметь возможность подключения к уже созданным турнирным игровым сессиям
   - Пользователь должен иметь возможность переподключения к игровой сессии в случае вылета
   - Пользователь должен иметь возможность покинуть игровую сессию в случае необходимости
