--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,1 +1,275 @@
+---
+- summary: |
+    Проверка регистрации на сайте с позитивным сценарием
+  requirement: |
+    При верном вводе данных в поле регистрации, пользователь будет успешно зарегестрирован
+  prerequisites: |
+    Открыта страница регистрации
+  test-data: |
+    Nickname = smokeinureyes Email = dmnprmnv288@gmail.com Password = 29029458
+  steps:
+    - Ввести Nickname
+    - Ввести Email
+    - Ввести Password
+    - Нажать кнопку «Submit»
+  expected-result: |
+    Пользователь будет успешно зарегестрирован на сайте и авторизован
 
+- summary: |
+    Проверка регистрации на сайте с негативным сценарием
+  requirement: |
+    При не верном вводе данных в полях регистрации, пользователь получит информацию о неверно введенных данных
+  prerequisites: |
+    Открыта страница регистрации
+  test-data: |
+    Nickname = w Email = w@gmail.com Password = w
+  steps:
+    - Ввести Nickname
+    - Ввести Email
+    - Ввести Password
+    - Нажать кнопку «Submit»
+  expected-result: |
+    Пользователь не сможет зарегестрироваться и получит информацию о неверно введенных данных
+    
+- summary: |
+    Проверка авторизации на сайте с позитивным сценарием
+  requirement: |
+    При верном вводе данных в полях авторизации, пользователь успешно авторизуется
+  prerequisites: |
+    Открыта страница авторизации
+  test-data: |
+    Email = dmnprmnv286@gmail.com Password = 29029458
+  steps:
+    - Ввести Email
+    - Ввести Password
+    - Нажать кнопку «Submit»
+  expected-result: |
+    Пользователь успешно авторизуется
+    
+- summary: |
+    Проверка авторизации на сайте с негативным сценарием
+  requirement: |
+    При не верном вводе данных в полях авторизации, пользователь получит информацию о неверно введенных данных
+  prerequisites: |
+    Открыта страница авторизации
+  test-data: |
+    Email = w@gmail.com Password = 29
+  steps:
+    - Ввести Email
+    - Ввести Password
+    - Нажать кнопку «Submit»
+  expected-result: |
+    Пользователь не сможет авторизоваться и получит ошибку о неверно введенных данных
+    
+- summary: |
+    Проверка создания игровой сессии
+  requirement: |
+    При попытке пользователя создать новую игровую сессию, она создатся
+  prerequisites: |
+    Открыта главная страница сайта
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Нажать кнопку "Create a game"
+    - Выбрать нужные параметры
+    - Нажать кнопку "Create Battle"
+  expected-result: |
+    Пользователь успешно создаст игровую сессию и будет уже находится в ней
+    
+- summary: |
+    Проверка подключения к созданной игровой сессии
+  requirement: |
+    При попытке пользователя подключиться к уже созданной игровой сессии, он подключится
+  prerequisites: |
+    Открыта главная страница сайта
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Нажать вкладку "LOBBY"
+    - Найти интересующую сессию
+    - Нажать кнопку "Fight"
+  expected-result: |
+    Пользователь успешно подключится в игровую сессию и начнется соревнование
+    
+- summary: |
+    Проверка создания , выбора параметров турнирной игровой сессии
+  requirement: |
+    При попытке пользователя создать и выбрать параметры турнирой игровой сессии, она будет создана с выбранными параметрами
+  prerequisites: |
+    Открыта главная страница сайта
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Нажать вкладку "TOURNAMENTS"
+    - Нажать кнопку "Tournaments info"
+    - Выбрать нужные параметры
+    - Нажать кнопку "Create"
+  expected-result: |
+    Пользователь успешно создаст турнирную игровую сессию, с выбранными параметрами
+    
+- summary: |
+    Проверка подключения к уже созданным турнирным игровым сессиям
+  requirement: |
+    При попытке пользователя подключиться к уже созданной турнирной игровой сессии, он успешно подключится
+  prerequisites: |
+    Открыта главная страница сайта
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Нажать вкладку "TOURNAMENTS"
+    - Выбрать нужный нам турнир
+    - Нажать кнопку "Show" на нужном турнире
+    - Нажать кнопку "Join" в открывшемся окне
+  expected-result: |
+    Пользователь успешно присоединится к турнирой игровой сессии
+    
+- summary: |
+    Проверка переподключения к игровой сессии в случае вылета
+  requirement: |
+    При попытке пользователя переподключиться к игровой сессии, он успешно подключится
+  prerequisites: |
+    Открыта главная страница сайта
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Нажать вкладку "LOBBY
+    - Выбрать сессию, из которой вылетели
+    - Нажать кнопку "Fight" на нужном турнире
+  expected-result: |
+    Пользователь успешно переподключится к сессии и продолжит соревнование
+    
+- summary: |
+    Проверка возможности покинуть игровую сессию с возможностью вернуться, в случае необходимости
+  requirement: |
+    При попытке пользователя покинуть сессию, он сможет это сделать и после вернуться
+  prerequisites: |
+    Открыта игровая сессия
+  test-data: |
+    Пользователю нужно покинуть игровую сессию
+  steps:
+    - Нажать кнопку "Back to Home"
+  expected-result: |
+    Пользователь успешно покинет игровую сессию, вернувшись на главную страницу, но сможет вернуться к игровой сессии и закончить написание кода
+    
+- summary: |
+    Проверка возможности окончательно покинуть игровую сессию в случае необходимости
+  requirement: |
+    При попытке пользователя окончательно покинуть игровую сессию у него это получится
+  prerequisites: |
+    Открыта игровая сессия
+  test-data: |
+    Пользователю нужно покинуть игровую сессию
+  steps:
+    - Нажать кнопку "Give Up" в виде красного флажка под окном чата
+  expected-result: |
+    Пользователь успешно покинет игровую сессию, но ему засчитает поражение в статистику
+    
+- summary: |
+    Проверка возможности проверить верно написанный пользователем код в процессе игры
+  requirement: |
+    При попытке пользователя проверить верно написанный код, он получит уведомление об этом
+  prerequisites: |
+    Открыта игровая сессия
+  test-data: |
+    Пользователю нужно проверить код
+  steps:
+    - Нажать зеленую кнопку "Check" под окном чата
+  expected-result: |
+    Пользователь увидит всплывшее окно об успешном завершении сорвенования 
+    
+- summary: |
+    Проверка возможности проверить не верно написанный пользователем код в процессе игры
+  requirement: |
+    При попытке пользователя проверить не верно написанный код, он получит уведомление об этом
+  prerequisites: |
+    Открыта игровая сессия
+  test-data: |
+    Пользователю нужно проверить код
+  steps:
+    - Нажать зеленую кнопку "Check" под окном чата
+  expected-result: |
+    Пользователь увидит вспылвшее уведомление, говорящее о том что тест провален
+    
+- summary: |
+    Проверка возможности покинуть игровую сессию по завершению игры с сохраненным в статистику результатом
+  requirement: |
+    При попытке пользователя покинуть заврешенную игру с сохранением результата в статистику, у него это получится
+  prerequisites: |
+    Открыта игровая сессия
+  test-data: |
+    Пользователь завершил игру
+  steps:
+    - Нажать на крестик в всплывшем окне или "Thanks"
+    - Нажать кнопку "Back to Home"
+  expected-result: |
+    Пользователь покинет завершенную игровую сессию, а её результат будет сохранен в статистику
+    
+- summary: |
+    Проверка возможности просмотра своего профиля пользователем
+  requirement: |
+    При попытке пользователя просмотреть свой профиль у него это получится
+  prerequisites: |
+    Открыта главная страница
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Нажать на свой Nickname
+    - Нажать кнопку "My Profile"
+  expected-result: |
+    Пользователь увидит информацию о своём профиле
+    
+- summary: |
+    Проверка возможности редактирования профиля пользователем
+  requirement: |
+    При попытке пользователя отредактировать данные своего профиля, у него это получится
+  prerequisites: |
+    Открыта главная страница
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Нажать на свой Nickname
+    - Нажать кнопку "Settings"
+    - Изменить редактируемые данные на желаемые
+  expected-result: |
+    Пользователь успешно отредактирует данные профиля и сохранит изменения
+    
+- summary: |
+    Проверка возможности просмотра профилей других пользователей
+  requirement: |
+    При попытке пользователя просмотреть другие профили и их статистику у него это получится
+  prerequisites: |
+    Открыта главная страница
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Нажать на любой никнейм в списке Online Players
+  expected-result: |
+    Пользователь увидит профиль другого пользователя, включая его статистику
+    
+- summary: |
+    Проверка возможности просмотра общей статистики рейтинга пользователей
+  requirement: |
+    При попытке пользователя просмотреть общую статистику рейтинга среди пользователей, у него это получится
+  prerequisites: |
+    Открыта главная страница
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Нажать кнокпу "TOP List", расположенную в нижней части сайта
+  expected-result: |
+    Пользователь увидит общую статистику рейтинга пользователей 
+    
+- summary: |
+    Проверка работы фильтров в общей статистике рейтинга пользователей
+  requirement: |
+    При попытке пользователя отфильтровать список общей статистики рейтинга по имеющимся параметрам у него это получится
+  prerequisites: |
+    Открыта общая статистика рейтинга пользователей
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Использовать имеющиеся фильтры для сортировки списка общей статистики рейтинга
+  expected-result: |
+    Пользователь увидит общую статистику рейтинга пользователей по выбранным им фильтрам   
+
+    
