--- a/test-cases.yml
+++ b/test-cases.yml
@@ -272,4 +272,58 @@
   expected-result: |
     Пользователь увидит общую статистику рейтинга пользователей по выбранным им фильтрам   
 
+- summary: |
+    Проверка возможности пользователя оставаться авторизованным даже после перезагрузки страницы
+  requirement: |
+    При перезагрузке страницы, пользователь остается авторизованным
+  prerequisites: |
+    Открыта главная страница сайта
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Перезагрузить страницу
+  expected-result: |
+    Пользователь после перезагрузки страницы останется авторизованным 
+  
+- summary: |
+    Проверка возможности пользователя пользоваться чатом во время игровой сессии
+  requirement: |
+    При нахождении в игровой сессии, пользователь сможет общаться в чате со своим соперником
+  prerequisites: |
+    Открыта игровая сессия
+  test-data: |
+    Идёт соревнование
+  steps:
+    - Написать сообщение сопернику в чат, находясь в игровой сессии
+    - Нажать кнопку "Send"
+  expected-result: |
+    Пользователь успешно отправит сообщение сопернику
     
+- summary: |
+    Проверка возможности пользователя пользоваться общим чатом
+  requirement: |
+    Пользователь сможет общаться на главной странице с другими пользователями, с помощью чата
+  prerequisites: |
+    Открыта главная страница сайта
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Написать что-то в чат
+    - Нажать кнопку "Send"
+  expected-result: |
+    Пользователь успешно отправит сообщение в общий чат
+    
+- summary: |
+    Проверка возможности смотреть за процессом уже запущенной игровой сессии
+  requirement: |
+    При попытке зайти и понаблюдать за уже запущенной игровой сессии, у пользователя это получится
+  prerequisites: |
+    Открыта главная страница сайта
+  test-data: |
+    Пользователь авторизован
+  steps:
+    - Нажать вкладку "LOBBY"
+    - Подобрать нужную запущенную игровую сессию
+    - Нажать "Show"
+  expected-result: |
+    Пользователь успешно подключиться в режиме наблюдателя к сессии
