--- a/test-cases.yml
+++ b/test-cases.yml
@@ -134,7 +134,7 @@
   steps:
     - Нажать вкладку "LOBBY
     - Выбрать сессию, из которой вылетели
-    - Нажать кнопку "Fight" на нужном турнире
+    - Нажать кнопку "Continue" на нужной сессии
   expected-result: |
     Пользователь успешно переподключится к сессии и продолжит соревнование
     
