--- a/test-cases.yml
+++ b/test-cases.yml
@@ -327,3 +327,16 @@
     - Нажать "Show"
   expected-result: |
     Пользователь успешно подключиться в режиме наблюдателя к сессии
+
+- summary: |
+    Проверка мобильной версии сайта
+  requirement: |
+    Пользователь без затруднений сможет зайти на мобильную версию сайта
+  prerequisites: |
+    Открыта браузер на мобильном устройстве
+  test-data: |
+    В адресной строке записан адрес сайта (https://codebattle.hexlet.io/)
+  steps:
+    - Загрузить страницу
+  expected-result: |
+    Пользователь успешно зайдет на главную страницу сайта
