--- a/requirements.yml
+++ b/requirements.yml
@@ -26,3 +26,4 @@ implicit:
   - Пользователь должен иметь возможность пользоваться чатом во время игровой сессии
   - Пользователь должен иметь возможность пользоваться общим чатом при нахождении на главной странице сайта
   - Пользователь должен иметь возможность смотреть за процессом уже запущенной игровой сессии
+  - Пользователь должен иметь возможность зайти на сайт, используя мобильное устройство
