--- a/testing-report.yml
+++ b/testing-report.yml
@@ -91,4 +91,6 @@
     Проверка возможности смотреть за процессом уже запущенной сессии
   status: pass  
   
-  
+- summary: |
+    Проверка мобильной версии сайта
+  status: pass   
