--- a/test-cases.yml
+++ b/test-cases.yml
@@ -255,7 +255,7 @@
   test-data: |
     Пользователь авторизован
   steps:
-    - Нажать кнокпу "TOP List", расположенную в нижней части сайта
+    - Нажать кнокпу "TOP List" в нижней части формы "LEADERBOARD"
   expected-result: |
     Пользователь увидит общую статистику рейтинга пользователей 
     
