--- a/issues.yml
+++ b/issues.yml
@@ -7,3 +7,4 @@ issues:
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1488"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1473"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1468"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1450"
