--- a/issues.yml
+++ b/issues.yml
@@ -9,3 +9,4 @@ issues:
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1468"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1450"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1421"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1392"
