--- a/issues.yml
+++ b/issues.yml
@@ -11,3 +11,4 @@ issues:
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1421"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1392"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1491"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1492"
