--- a/issues.yml
+++ b/issues.yml
@@ -12,3 +12,4 @@ issues:
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1392"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1491"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1492"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1493"
