--- a/issues.yml
+++ b/issues.yml
@@ -14,3 +14,4 @@ issues:
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1492"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1493"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1494"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1495"
