--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Проверка регистрации на сайте с позитивным сценарием
+    Проверка успешной регистрации
   requirement: |
     При верном вводе данных в поле регистрации, пользователь будет успешно зарегестрирован
   prerequisites: |
@@ -13,10 +13,9 @@
     - Ввести Password
     - Нажать кнопку «Submit»
   expected-result: |
-    Пользователь будет успешно зарегестрирован на сайте и авторизован
-
+    Пользователь успешно зарегистрирован
 - summary: |
-    Проверка регистрации на сайте с негативным сценарием
+    Проверка неуспешной регистрации
   requirement: |
     При не верном вводе данных в полях регистрации, пользователь получит информацию о неверно введенных данных
   prerequisites: |
@@ -29,10 +28,10 @@
     - Ввести Password
     - Нажать кнопку «Submit»
   expected-result: |
-    Пользователь не сможет зарегестрироваться и получит информацию о неверно введенных данных
+    Пользователь не зарегистрирован
     
 - summary: |
-    Проверка авторизации на сайте с позитивным сценарием
+    Проверка успешной авторизации
   requirement: |
     При верном вводе данных в полях авторизации, пользователь успешно авторизуется
   prerequisites: |
@@ -47,7 +46,7 @@
     Пользователь успешно авторизуется
     
 - summary: |
-    Проверка авторизации на сайте с негативным сценарием
+    Проверка неуспешной
   requirement: |
     При не верном вводе данных в полях авторизации, пользователь получит информацию о неверно введенных данных
   prerequisites: |
@@ -59,7 +58,7 @@
     - Ввести Password
     - Нажать кнопку «Submit»
   expected-result: |
-    Пользователь не сможет авторизоваться и получит ошибку о неверно введенных данных
+    Пользователь не сможет авторизоваться
     
 - summary: |
     Проверка создания игровой сессии
@@ -74,7 +73,7 @@
     - Выбрать нужные параметры
     - Нажать кнопку "Create Battle"
   expected-result: |
-    Пользователь успешно создаст игровую сессию и будет уже находится в ней
+    Игровая сессия с выбранными параметрами создана и открыта
     
 - summary: |
     Проверка подключения к созданной игровой сессии
@@ -92,7 +91,7 @@
     Пользователь успешно подключится в игровую сессию и начнется соревнование
     
 - summary: |
-    Проверка создания , выбора параметров турнирной игровой сессии
+    Проверка создания турнирной игровой сессии
   requirement: |
     При попытке пользователя создать и выбрать параметры турнирой игровой сессии, она будет создана с выбранными параметрами
   prerequisites: |
@@ -130,8 +129,11 @@
   prerequisites: |
     Открыта главная страница сайта
   test-data: |
-    Пользователь авторизован
+    Пользователь авторизован и находится в игровой сессии
   steps:
+    - Закрыть браузер, имитируя так его вылет
+    - Открыть браузер
+    - Зайти на главную страницу сайта
     - Нажать вкладку "LOBBY
     - Выбрать сессию, из которой вылетели
     - Нажать кнопку "Continue" на нужной сессии
@@ -139,7 +141,7 @@
     Пользователь успешно переподключится к сессии и продолжит соревнование
     
 - summary: |
-    Проверка возможности покинуть игровую сессию с возможностью вернуться, в случае необходимости
+    Проверка возврата в игровую сессию после выхода из неё
   requirement: |
     При попытке пользователя покинуть сессию, он сможет это сделать и после вернуться
   prerequisites: |
@@ -148,11 +150,14 @@
     Пользователю нужно покинуть игровую сессию
   steps:
     - Нажать кнопку "Back to Home"
+    - Нажать вкладу "LOBBY"
+    - Выбрать сессию, из которой вышли
+    - Нажать кнопку "Continue" на нужной сессии
   expected-result: |
     Пользователь успешно покинет игровую сессию, вернувшись на главную страницу, но сможет вернуться к игровой сессии и закончить написание кода
     
 - summary: |
-    Проверка возможности окончательно покинуть игровую сессию в случае необходимости
+    Проверка кнопки "Give Up" в активной игровой сессии
   requirement: |
     При попытке пользователя окончательно покинуть игровую сессию у него это получится
   prerequisites: |
@@ -161,11 +166,14 @@
     Пользователю нужно покинуть игровую сессию
   steps:
     - Нажать кнопку "Give Up" в виде красного флажка под окном чата
+    - Подтвердить то, что хочешь сдаться
+    - Нажать кнопку "I'll be back"
+    - Нажать кнопку "Back to Home"
   expected-result: |
     Пользователь успешно покинет игровую сессию, но ему засчитает поражение в статистику
     
 - summary: |
-    Проверка возможности проверить верно написанный пользователем код в процессе игры
+    Проверка кнопки "Check" в активной игровой сессии с верно написанным кодом
   requirement: |
     При попытке пользователя проверить верно написанный код, он получит уведомление об этом
   prerequisites: |
@@ -178,7 +186,7 @@
     Пользователь увидит всплывшее окно об успешном завершении сорвенования 
     
 - summary: |
-    Проверка возможности проверить не верно написанный пользователем код в процессе игры
+    Проверка кнопки "Check" в активной игровой сессии с не верно написанным кодом
   requirement: |
     При попытке пользователя проверить не верно написанный код, он получит уведомление об этом
   prerequisites: |
@@ -273,7 +281,7 @@
     Пользователь увидит общую статистику рейтинга пользователей по выбранным им фильтрам   
 
 - summary: |
-    Проверка возможности пользователя оставаться авторизованным даже после перезагрузки страницы
+    Проверка сохранения авторизации после перезагрузки страницы
   requirement: |
     При перезагрузке страницы, пользователь остается авторизованным
   prerequisites: |
@@ -339,4 +347,4 @@
   steps:
     - Загрузить страницу
   expected-result: |
-    Пользователь успешно зайдет на главную страницу сайта
+    Приложение имеет мобильную версию
