--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,18 +1,18 @@
 ---
 - summary: |
-    Проверка регистрации на сайте с позитивным сценарием
+    Проверка успешной регистрации
   status: pass
 
 - summary: |
-    Проверка регистрации на сайте с негативным сценарием
+    Проверка неуспешной регистрации
   status: pass
   
 - summary: |
-    Проверка авторизации на сайте с позитивным сценарием
+    Проверка успешной авторизации
   status: pass
   
 - summary: |
-    Проверка авторизации на сайте с негативным сценарием
+    Проверка неуспешной авторизации
   status: pass
   
 - summary: |
@@ -24,7 +24,7 @@
   status: pass
   
 - summary: |
-    Проверка создания, выбора параметров турнирной игровой сессии
+    Проверка создания турнирной игровой сессии
   status: pass
   
 - summary: |
@@ -36,19 +36,19 @@
   status: pass
   
 - summary: |
-    Проверка возможности покинуть игровую сессию с возможностью вернуться, в случае необходимости
+    Проверка возврата в игровую сессию после выхода из неё
   status: pass
   
 - summary: |
-    Проверка возможности окончательно покинуть игровую сессию в случае необходимости
+    Проверка кнопки "Give Up" а активной игровой сессии
   status: pass
   
 - summary: |
-    Проверка возможности проверить верно написанный пользователем код в процессе игры
+    Проверка кнопки "Check" в активной игровой сессии с верно написанным кодом
   status: pass 
   
 - summary: |
-    Проверка возможности проверить не верно написанный пользователем код в процессе игры
+    Проверка кнопки "Check" в активной игровой сессии с не верно написанным кодом
   status: pass 
   
 - summary: |
@@ -76,7 +76,7 @@
   status: pass  
   
 - summary: |
-    Проверка возможности пользователя оставаться авторизованным после перезагрузки страницы
+    Проверка сохранения авторизации после перезагрузки страницы
   status: pass  
   
 - summary: |
@@ -93,4 +93,4 @@
   
 - summary: |
     Проверка мобильной версии сайта
-  status: pass   
+  status: fail   
