--- a/issues.yml
+++ b/issues.yml
@@ -5,11 +5,11 @@ issues:
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1486"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1487"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1488"
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1473"
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1468"
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1450"
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1421"
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1392"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1473#issuecomment-1591156628"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1468#issuecomment-1591174931"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1450#issuecomment-1592844561"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1421#issuecomment-1592851727"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1392#issuecomment-1592858495"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1491"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1492"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1493"
