--- a/reopened_issues.yml
+++ b/reopened_issues.yml
@@ -1,3 +1,3 @@
 ---
 issues:
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1381"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1381#issuecomment-1592792420"
