--- a/test-cases.yml
+++ b/test-cases.yml
@@ -47,7 +47,7 @@
     Пользователь успешно авторизуется
     
 - summary: |
-    Проверка неуспешной
+    Проверка неуспешной авторизации
   requirement: |
     При не верном вводе данных в полях авторизации, пользователь получит информацию о неверно введенных данных
   prerequisites: |
